# AoC2020

./: .gitignore  Cargo.toml  add_day.py  templates.py
src/: bin.rs  main.rs
