[package]
name = "aoc2020"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argparse = { version = "0.2.2" }
itertools = { version = "0.10.3" }
regex = { version = "1.5.4" }
array_tool = { version = "1.0.3"}